fixed software dev alignment

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -173,7 +173,8 @@
 .domainImages {
   width: 70%;
   height: auto;
-  margin: auto;
+  margin-left: auto;
+  margin-right: auto;
   margin-bottom: 1rem;
 }
 .domainRow {
